[gd_scene load_steps=13 format=3 uid="uid://c72ms8y7iwcy6"]

[ext_resource type="Script" path="res://scene/barel.gd" id="1_7ws02"]
[ext_resource type="Texture2D" uid="uid://c7oiw8bwv58j7" path="res://char/Barrel_Blue.png" id="1_rttmn"]
[ext_resource type="Texture2D" uid="uid://bjo0dx0v7xr5" path="res://char/Arrow.png" id="2_fo2wj"]
[ext_resource type="Texture2D" uid="uid://cchaejyh3dxud" path="res://char/Explosions.png" id="3_ggb66"]
[ext_resource type="Script" path="res://dameg_area.gd" id="4_8g612"]
[ext_resource type="AudioStream" uid="uid://dkqmyliheus1n" path="res://sfx/Footsteps_ running.wav" id="5_b80sn"]
[ext_resource type="AudioStream" uid="uid://c6mqr4ryu4jh2" path="res://sfx/Swoosh_3.wav" id="6_pt1ef"]
[ext_resource type="AudioStream" uid="uid://cy3wtuovwq0hu" path="res://sfx/explosion-91872.mp3" id="7_ntvut"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4kcff"]
radius = 108.462

[sub_resource type="CircleShape2D" id="CircleShape2D_hgq3w"]
radius = 19.105

[sub_resource type="CircleShape2D" id="CircleShape2D_vmxa4"]
radius = 490.474

[sub_resource type="CircleShape2D" id="CircleShape2D_870na"]
radius = 214.037

[node name="Barel" type="CharacterBody2D" groups=["enmy"]]
collision_mask = 15
script = ExtResource("1_7ws02")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rttmn")
offset = Vector2(0, -30)
flip_h = true
hframes = 6
vframes = 6
frame = 24

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
position = Vector2(4, -16)
rotation = -0.420534
texture = ExtResource("2_fo2wj")
flip_h = true
vframes = 2
frame = 1

[node name="Sprite2D3" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.631373)
self_modulate = Color(1, 0.884148, 0.912978, 1)
scale = Vector2(1.51563, 1.51563)
texture = ExtResource("3_ggb66")
hframes = 9

[node name="dameg_area" type="Area2D" parent="."]
rotation = 2.50468
script = ExtResource("4_8g612")

[node name="CollisionShape2D" type="CollisionShape2D" parent="dameg_area"]
position = Vector2(3, 4)
shape = SubResource("CircleShape2D_4kcff")
disabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_b80sn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hgq3w")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pt1ef")

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ntvut")

[node name="path" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="path"]
z_index = -1
shape = SubResource("CircleShape2D_vmxa4")
debug_color = Color(0.175007, 0.7, 0.18515, 0.42)

[node name="attack" type="Area2D" parent="."]
position = Vector2(6, 37)

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
z_index = -1
position = Vector2(-7, -5)
rotation = -0.799966
shape = SubResource("CircleShape2D_870na")
debug_color = Color(0.7, 0.395529, 0.141606, 0.42)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Timer2" type="Timer" parent="."]

[connection signal="body_entered" from="path" to="." method="_on_path_body_entered"]
[connection signal="body_exited" from="path" to="." method="_on_path_body_exited"]
[connection signal="body_entered" from="attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="attack" to="." method="_on_attack_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
